tests/ui/diagnostic_namespace/on_unimplemented/on_unimplemented_on_inherent_impl-issue-151796.stderr
error[E0599]: no method named `with_bar` found for struct `PartialTest<true, true>` in the current scope
  --> $DIR/on_unimplemented_on_inherent_impl-issue-151796.rs:44:56
   |
LL | struct PartialTest<const FOO: bool, const BAR: bool> {
   | ---------------------------------------------------- method `with_bar` not found for this struct
...
LL |     let _ = PartialTest::new().with_bar(1).with_foo(1).with_bar(2);
   |                                                        ^^^^^^^^
   |                                                        |
   |                                                        method not found in `PartialTest<true, true>`
   |                                                        method can't be called twice
   |
   = note: the method was found for
           - `PartialTest<FOO, false>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0599`.
